# dsl-finetuning-pipeline

./: .gitignore  README.md  dataset.py  evaluate.py  main.py  process_dataset.py  pyproject.toml  seed_db.py  test.py  train.py
docs/: architecture.md
docs/adr/: adr-001-synthetic-data-strategy.md  adr-002-execution-based-eval.md
src/: config.py  generate.py  inference.py  llm_client.py  logger.py  schema.py
src/data_gen/: prompt_factory.py
src/engine/: db.py  transpiler.py
src/retrieval/: vector_store.py
