[project]
name = "dsl-finetuning-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "faker>=39.0.0",
    "openai>=2.14.0",
    "pysqlite3-binary>=0.5.4.post2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]
